# ProStreetTimeTrialGhosts

./: CMakeLists.txt  NFSPSTimeTrialGhosts_gcp.toml  README.md  challengeseries.h  d3dhook.h  main.cpp  util.h
CwoeeGhosts/: handbrake.dds  nos.dds  speedbreaker.dds
CwoeeGhosts/Challenges/: 1.gr.1_player_d_day_lap2_1.psrep  1.gr.1_player_d_day_lap2_2.psrep2  1.gr.1_player_d_day_lap2_3.psrep3  14.gr.1_grip_king_lap2_1.psrep2  14.gr.1_grip_king_lap2_2.psrep2  14.gr.1_grip_king_lap2_3.psrep2  14.gr.1_grip_king_lap2_4.psrep3  19.gr.2_energizer_viper_lap2_1.psrep2  19.gr.2_energizer_viper_lap2_2.psrep3  20.gr.1_fe_grip_1_rx8_lap3_1.psrep2  21.gr.1_p_ch_t3_autob_grip_1.psrep2  22.hs.1_fe_sc_3_caymans_1.psrep2  22.hs.1_fe_sc_3_caymans_2.psrep2  22.hs.1_fe_sc_3_caymans_3.psrep2  25.gr.1_fe_grip_2_eclipse_lap2_1.psrep2  25.gr.1_fe_grip_2_eclipse_lap2_2.psrep2  25.gr.1_fe_grip_2_eclipse_lap2_3.psrep2  25.gr.1_fe_grip_2_eclipse_lap2_4.psrep2  28.gr.1_fe_grip_1_rx8_lap2_1.psrep3  3.gr.2_sc_entourage_1_sc_lap2_1.psrep2  3.gr.2_sc_entourage_1_sc_lap2_2.psrep2  31.gr.1_fe_grip_3_murc640_lap2_1.psrep2  31.gr.1_fe_grip_3_murc640_lap2_2.psrep2  31.gr.1_fe_grip_3_murc640_lap2_3.psrep2  31.gr.1_fe_grip_3_murc640_lap2_4.psrep2  5.gr.1_p_ch_t1_nvd_grip_lap2_1.psrep2  5.gr.1_p_ch_t1_nvd_grip_lap2_2.psrep2  5.gr.1_p_ch_t1_nvd_grip_lap2_3.psrep2  5.gr.1_p_ch_t1_nvd_grip_lap2_4.psrep3  5.gr.1_p_ch_t1_nvd_grip_lap2_5.psrep3  5.gr.1_p_ch_t1_nvd_grip_lap2_6.psrep3  7.gr.1_showdown_king_final_grip_lap2_1.psrep3  7.gr.1_showdown_king_final_grip_lap2_2.psrep3  (+15 more)
hooks/: carrender.h
(+107 files in other folders)
